Add service and allow reading from file in prod to not need server

--- a/angular.json
+++ b/angular.json
@@ -123,6 +123,10 @@
               "devServerTarget": "covid-graphs:serve:production"
             }
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy",
+          "options": {}
         }
       }
     }
