--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 		"start": "ng serve --proxy-config proxy.conf.json",
 		"build": "ng build",
 		"test": "ng test",
+		"deploy": "ng deploy --base-href=covid-graphs",
 		"lint": "ng lint",
 		"e2e": "ng e2e"
 	},
@@ -25,6 +26,7 @@
 		"tslib": "^2.0.0",
 		"zone.js": "~0.10.2"
 	},
+	"resolutions": {"webpack": "^5.0.0"},
 	"devDependencies": {
 		"@angular-devkit/build-angular": "~0.1102.9",
 		"@angular/cli": "~11.2.9",
@@ -33,7 +35,7 @@
 		"@types/jasmine": "~3.6.0",
 		"@types/jasminewd2": "~2.0.3",
 		"@types/node": "^12.11.1",
-		"angular-cli-ghpages": "^0.6.2",
+		"angular-cli-ghpages": "^1.0.0-rc.1",
 		"codelyzer": "^6.0.0",
 		"jasmine-core": "~3.6.0",
 		"jasmine-spec-reporter": "~5.0.0",
